--- a/_config.yml
+++ b/_config.yml
@@ -48,12 +48,35 @@ author:
 
 # Add links to the sidebar.
 menu:
-  - title:             Example
-    url:               /example/
-  - title:             Documentation
-    url:               /docs/
   - title:             About
     url:               /about/
+    submenu:
+      - title:            About Me
+        url:              /aboutMe/
+      - title:            Project
+        url:              /project/
+  - title:             Language
+    url:               /Language/
+    submenu: 
+      - title:            Java
+        url:              /java/
+      - title:            Javascript
+        url:              /javascript/
+  - title:             Server
+    url:               /server/
+    submenu:
+      - title:             Spring
+        url:               /spring/
+  - title:             Database
+    url:               /database/
+    submenu:
+      - title:             Oracle
+        url:               /oracle/
+  - title:             Tags
+    url:               /tags/
+  - title:             ETC
+    url:               /etc/
+
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
