Edit sube-menu to post about Vue

--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,8 @@ menu:
         url:              /java/
       - title:            Javascript
         url:              /javascript/
+      - title:            Vue
+        url:              /vue/
   - title:             Framework
     url:               /framework/
     submenu:
