--- a/_config.yml
+++ b/_config.yml
@@ -179,6 +179,7 @@ defaults:
       type:            posts
     values:
       comments:        true
+      sitemap: true
 
   # `jekyll-seo-tag` will mark collection outputs as `BlogPosting`,
   # but we want them to be `WebPage`s:
