edit config.yml file to post about my dat life

--- a/_config.yml
+++ b/_config.yml
@@ -102,6 +102,8 @@ menu:
     submenu:
       - title:             Useful
         url:               /useful/
+      - title:             DayLife
+        url:               /dayLife/
 
 
 # Add links to the footer.
